# I-Have-Seen-This

code_librarian/: .gitignore  README.md  bridge.py  cbridge.py  distillation_task.md  error_log.txt  pyproject.toml  recall.py
code_librarian/src/code_librarian/: bridge_parse.py  crew.py  main.py
code_librarian/src/code_librarian/config/: agents.yaml  tasks.yaml
code_librarian/src/code_librarian/tools/: lancedb_store.py  store_tool.py
