[project]
name = "code_librarian"
version = "0.1.0"
description = "code_librarian using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
code_librarian = "code_librarian.main:run"
run_crew = "code_librarian.main:run"
train = "code_librarian.main:train"
replay = "code_librarian.main:replay"
test = "code_librarian.main:test"
run_with_trigger = "code_librarian.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
